# random-word-api

./: .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .sql-formatter.json  AUTHENTICATION.md  Cargo.toml  README.md  TEST_OPTIMIZATION_SUMMARY.md  TODO.md  config.toml  docker-compose.yml  justfile
ai_generated_docs/: MIDDLEWARE_IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md  TESTING_STRATEGY_SUMMARY.md
be-word-api-axum/: Cargo.toml  config.toml  justfile
be-word-api-axum/migrations/: 20250727140350_create_words_table.down.sql  20250727160002_insert_adjectives.sql  20250820100612_create_users_table.down.sql
be-word-api-axum/src/handlers/: word.rs
be-word-api-axum/src/middleware/: mod.rs  security.rs
be-word-api-axum/src/routes/: admin.rs
be-word-api-axum/tests/: common.rs
docker/: Dockerfile.backend  Dockerfile.frontends
docker/api/: config.toml
docker/nginx/: nginx-frontends.conf  nginx.conf
fe-leptos-adminpage/: Cargo.toml
fe-leptos-landingpage/: Cargo.toml  index.html
fe-leptos-landingpage/src/: app.rs  model.rs
fe-leptos-randomword/: Cargo.toml  Trunk.toml  index.html
fe-leptos-randomword/src/: app.rs
fe-leptos-randomword/src/css/: tailwind.css
migrations/: 20250727140350_create_words_table.sql  20250727140350_create_words_table.up.sql  20250727140355_add_words_triggers.up.sql  20250727140400_add_unique_word.down.sql  20250727140400_add_unique_word.up.sql  20250727145218_insert_sample_words.sql  20250727150000_insert_500_words.sql  20250727160000_insert_nouns.sql  20250727160001_insert_verbs.sql  20250727160002_insert_adjectives.sql  20250727160003_insert_adverbs.sql
src/: auth.rs  cli.rs  error.rs  handlers.rs  main.rs  router.rs  routes.rs  state.rs  word.rs
src/handlers/: admin.rs  auth.rs  general.rs  healthcheck.rs  mod.rs  word.rs
src/middleware/: security.rs
src/model/: apiconfig.rs  config_file.rs  mod.rs  word.rs
src/models/: apiconfig.rs  mod.rs  word.rs
src/routes/: admin.rs  healthcheck.rs  mod.rs  openapi.rs  public.rs  word.rs
tests/: api_tests.rs  config_tests.rs  database_tests.rs  simple_tests.rs  validator_tests.rs
tests/common/: mod.rs
word-api-axum/: .gitignore  AUTHENTICATION.md  Cargo.toml  JWT_IMPLEMENTATION_SUMMARY.md  MIDDLEWARE_MIGRATION_STATUS.md  TESTING_STRATEGY_SUMMARY.md  config.toml  justfile
word-api-axum/migrations/: 20250727140350_create_words_table.up.sql  20250727140355_add_words_triggers.down.sql  20250727140355_add_words_triggers.up.sql  20250727140400_add_unique_word.down.sql  20250727140400_add_unique_word.up.sql  20250727160001_insert_verbs.sql  20250727160002_insert_adjectives.sql  20250727160003_insert_adverbs.sql  20250820100612_create_users_table.down.sql  20250820100612_create_users_table.up.sql  20250821091740_insert_unsafe_user.sql
word-api-axum/src/: auth.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
word-api-axum/src/handlers/: admin.rs  auth.rs  healthcheck.rs  mod.rs  word.rs
word-api-axum/src/middleware/: limits.rs  mod.rs  rate_limit.rs  security.rs  tracing.rs
word-api-axum/src/models/: apiconfig.rs  mod.rs  user.rs  word.rs
word-api-axum/src/routes/: admin.rs  auth.rs  healthcheck.rs  mod.rs  openapi.rs  word.rs
word-api-axum/tests/: MAINTENANCE.md  README.md  admin_tests.rs  auth_tests.rs  basic_test.rs  config_tests.rs  database_tests.rs  health_tests.rs  helpers_test.rs  performance_tests.rs  simple_tests.rs  validator_tests.rs  word_tests.rs
word-api-axum/tests/common/: mod.rs
word-api-axum/tests/helpers/: database.rs  fixtures.rs  mod.rs  shared_db.rs  test_data.rs
