[package]
name = "random-word-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"
publish = false

authors = ["Andrea C"]
repository = "http://github.com/andreacfromtheapp/random-word-api"
homepage = "sps-api.netlify.app"
description = "A simple API to use with my Speak and Spell toy project"
keywords = ["speak-and-spell"]

[dependencies]
regex = "1.11.1"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive", "cargo", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "openapi_extensions",
  "preserve_order",
  "preserve_path_order",
] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
tower = "0.5.2"
serial_test = "3.0.0"
