[workspace]
members = [
    "word-api-axum",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"
authors = ["Andrea C"]
repository = "http://github.com/andreacfromtheapp/random-word-api"
homepage = "sps-api.netlify.app"

[workspace.dependencies]
# General purpose dependencies that could be shared across workspace members
regex = "1.11.1"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
