[workspace]
members = ["fe-leptos-landingpage", "fe-leptos-randomword", "word-api-axum"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"
authors = ["Andrea C"]
repository = "http://github.com/andreacfromtheapp/random-word-api"
keywords = [
  "speak",
  "spell",
  "dictionary",
  "words",
  "random",
  "restful",
  "restful api",
  "rest",
  "rest api",
  "api",
  "axum",
  "leptos",
]
homepage = "https://word-api-axum.netlify.app"

[workspace.dependencies]
# General purpose dependencies that could be shared across workspace members
regex = "1.11.2"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
