[package]
name = "fe-leptos-randomword"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "A simple Leptos front-end for the Random Words API"
keywords.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
leptos = { version = "0.8", features = ["csr"] }
leptos-use = { version = "0.16.2", features = [] }
leptos_icons = { version = "0.7.0", features = [] }
icondata = { version = "0.6.0", default-features = false, features = [
  "font-awesome",
] }
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.23", features = ["brotli", "gzip", "json"] }

[lints.clippy]
empty_docs = "allow"
