[package]
name = "word-api-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Random Word API - A simple dictionary word service"
keywords = ["speak-and-spell"]
publish = false

[[bin]]
name = "word-api-axum"
path = "src/main.rs"

[dependencies]
# Workspace dependencies (general purpose)
regex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# API-specific dependencies
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.43", features = ["derive", "cargo", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = "9.3.1"
rcgen = "0.14.3"
rustls = { version = "0.23.31", features = ["brotli", "ring"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "openapi_extensions",
  "preserve_order",
  "preserve_path_order",
] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = "17.3.0"
tempfile = "3.20.0"
