[package]
name = "word-api-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Random Word API - A simple dictionary word service"
keywords.workspace = true
publish = false

[[bin]]
name = "word-api-axum"
path = "src/main.rs"

[dependencies]
# Workspace dependencies (general purpose)
regex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# API-specific dependencies
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5.48", features = ["derive", "cargo", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = [
  "trace",
  "cors",
  "compression-gzip",
  "compression-br",
  "limit",
  "timeout",
] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "openapi_extensions",
  "preserve_order",
  "preserve_path_order",
] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
getrandom = "0.3.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "18.1.0"
futures = "0.3.31"
tempfile = "3.23.0"
